[project]
name = "pdf-rag-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain-community>=0.3.16",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.3",
    "pdfplumber>=0.11.5",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.41.1",
]
